Được tạo bằng Colaboratory

--- a/Baitap1.ipynb
+++ b/Baitap1.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled1.ipynb",
+      "name": "Baitap1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOSK3SFfo4FwsAcbh1/vRxi",
+      "authorship_tag": "ABX9TyPCPqLpIW5EMBu+PDplU1JG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6T8WTQ8kw4zO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dkhhcugQxe_N",
+        "outputId": "76b86552-313f-4db1-8c5e-bd4e772d1bec"
       },
       "source": [
-        "Print('Hello Github & Colab')"
+        "print(\"Hello Github & Colab\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Github & Colab\n"
+          ]
+        }
+      ]
     }
   ]
 }
