Được tạo bằng Colaboratory

--- a/bài_tập_lập_trình.ipynb
+++ b/bài_tập_lập_trình.ipynb
@@ -6,7 +6,7 @@
       "name": "bài tập lập trình",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP+Iz9AJE/TnKktU2TzAV7L",
+      "authorship_tag": "ABX9TyOJZu3CWf213o4LkaBoLdkD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,16 +83,16 @@
         "b= float(input('b='))\n",
         "\n",
         "c=a+b\n",
-        "print(\"a+b\",c)     #tổng hai số\n",
+        "print('a+b=',c)     #tổng hai số\n",
         "\n",
         "d=a*b\n",
-        "print('a*b',d)     #tích hai số\n",
+        "print('a*b=',d)     #tích hai số\n",
         "\n",
         "e=a-b\n",
-        "print('a-b',e)     #hiệu hai số\n",
+        "print('a-b=',e)     #hiệu hai số\n",
         "\n",
         "f=a/b\n",
-        "print('a/b',f)    #thương hai số"
+        "print('a/b=',f)    #thương hai số"
       ],
       "execution_count": null,
       "outputs": []
