Được tạo bằng Colaboratory

--- a/BaitapkieuList.ipynb
+++ b/BaitapkieuList.ipynb
@@ -6,7 +6,7 @@
       "name": "BaitapkieuList",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPEl2rxYqBBbcFrXE7i3sox",
+      "authorship_tag": "ABX9TyNBUa0mmfn1kz7FUn84qjjG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d104ce2f-c82e-4557-e267-dc4bc0e91f3f"
+        "outputId": "840a1979-762c-40fc-868e-a87e7269df5e"
       },
       "source": [
         "#khởi tạo biến x kiểu List rỗng\n",
@@ -47,7 +47,7 @@
         "#tạo list y\n",
         "y=[12,45,-1,-0.56,\"abc\"]\n",
         "#thêm y vào x\n",
-        "x=y+x\n",
+        "x=x+y\n",
         "#xuất x\n",
         "print(\"giá trị của x:\",x)\n",
         "#xuất ra giá trị đầu tiên của x\n",
@@ -55,32 +55,26 @@
         "#xuất ra giá trị cuối cùng của x\n",
         "print(\"giá trị cuối cùng của x là: \",x[len(x)-1])\n",
         "#in ra màn giá trị của phần tử đầu tiên đến phần tử thứ 5 của x\n",
-        "x[0:4]\n",
+        "x[0:5]\n",
+        "print(\"giá trị của phần tử đầu tiên đến phần tử thứ 5 của x: \",x[0:5])\n",
         "#in ra màn giá trị của phần tử thứ 3 đến cuối cùng của x\n",
         "x[2:len(x)]\n",
+        "print(\"giá trị của phần tử thứ 3 đến cuối cùng của x: \",x[2:len(x)])\n",
         "\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "giá trị của x: [12, 45, -1, -0.56, 'abc', 18, 'Huế']\n",
-            "giá trị đầu tiên của x là:  12\n",
-            "giá trị cuối cùng của x là:  Huế\n"
+            "giá trị của x: [18, 'Huế', 12, 45, -1, -0.56, 'abc']\n",
+            "giá trị đầu tiên của x là:  18\n",
+            "giá trị cuối cùng của x là:  abc\n",
+            "giá trị của phần tử đầu tiên đến phần tử thứ 5 của x:  [18, 'Huế', 12, 45, -1]\n",
+            "giá trị của phần tử thứ 3 đến cuối cùng của x:  [12, 45, -1, -0.56, 'abc']\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[-1, -0.56, 'abc', 18, 'Huế']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
         }
       ]
     }
