Được tạo bằng Colaboratory

--- a/BTLT_vòng_lặp.ipynb
+++ b/BTLT_vòng_lặp.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOgKWOsVMGMk215z+ivpgIn",
+      "authorship_tag": "ABX9TyPea9J9Z3v2YwvrdmiMAxN4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,15 +72,15 @@
         "id": "l7PCtacm3NDt"
       },
       "source": [
-        "n=int(input(\" Nhap so nguyen duong: \")) \n",
+        "n=int(input(\" Nhập số nguyên dương: \")) \n",
         "if n<=0:\n",
-        "   n=int(input(\"Nhap lai so nguyen duong: \"))\n",
+        "   n=int(input(\"Nhập lại số nguyên dương: \"))\n",
         "i=1\n",
         "s=1\n",
         "while i <= n:\n",
         "  s=s*i\n",
         "  i+=1\n",
-        "print(\"Giai thua so can tim là: \",s)"
+        "print(\"Giai thừa só cần tìm là: \",s)"
       ],
       "execution_count": null,
       "outputs": []
@@ -118,9 +118,8 @@
         "            f1 = fn\n",
         "            fn = f0 + f1\n",
         "        return fn\n",
-        "  \n",
-        "print(\"nn số đầu tiên của dãy số Fibonacci: \")\n",
         "x=int(input(\" Nhap so nguyen: \"))\n",
+        "print(x, \" số đầu tiên của dãy số Fibonacci: \")\n",
         "s = \"\"\n",
         "for i in range(0, x):\n",
         "    s = s + str(fibonacci(i)) + \" \"\n",
@@ -146,7 +145,7 @@
         "id": "9v-uPXg-Ky8p"
       },
       "source": [
-        "sn=int(input(\" Nhap so nguyen: \"))\n",
+        "sn=int(input(\"Nhập số nguyên: \"))\n",
         "for i in range(0,sn):\n",
         "  if i>1:\n",
         "   for j in range(2,i):\n",
@@ -176,7 +175,7 @@
         "id": "mdADXqHN4IRc"
       },
       "source": [
-        "sn=int(input(\" Số cuối cùng của dãy: \"))\n",
+        "sn=int(input(\" Số cuối lớn nhất có thể của dãy: \"))\n",
         "n=int(input(\" Số số nguyên tố là: \"))\n",
         "x=1\n",
         "for i in range(0,sn):\n",
@@ -274,37 +273,25 @@
         "id": "JlfcP_cY40vG"
       },
       "source": [
-        "n = int(input(\"Nhập n=\"))\n",
-        "if n <=2 :\n",
-        "  print(\"Lối\")\n",
-        "if n>2:\n",
-        "  a=[0,1]\n",
-        "  y=0\n",
-        "  i=0\n",
-        "  while y<n:\n",
-        "    y=a[i+1] + a[i]\n",
-        "  if y<n:\n",
-        "    a.append(y)\n",
-        "  i +=1\n",
-        "print(a)\n",
-        "for i in a:\n",
-        "  d=0\n",
-        "  for y in range(1,i+1):\n",
-        "    if i % y ==0:\n",
-        "      d += 1\n",
-        "    if d==2:\n",
-        "      print(i,end=\" \")\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zRIbAnI15q1u"
-      },
-      "source": [
-        ""
+        "n=int(input(\"Giá trị n nhập vào bàn phím: \"))\n",
+        "bien=int(input(\"Số giá trị dãy Fibonaci: \"))\n",
+        "f1=int(input(\"Nhập giá trị đầu tiên (0,1): \"))\n",
+        "f2=int(input(\"Nhập giá trị thứ hai: (1)\"))\n",
+        "ls=[f1,f2]\n",
+        "i=2\n",
+        "while i<bien:\n",
+        "  lsi=ls[i-1]+ls[i-2]\n",
+        "  ls.append(lsi)\n",
+        "  i+=1\n",
+        "print(\"Dãy Fibonaci: \",ls)\n",
+        "print(\"Số Fibonaci là số nguyên tố nhỏ hơn n là: \")\n",
+        "for x in ls:\n",
+        "  if x<n and x>1:\n",
+        "   for j in range(2,x):\n",
+        "        if x%j==0 :\n",
+        "         break\n",
+        "   else:\n",
+        "      print(x, end=\" \")"
       ],
       "execution_count": null,
       "outputs": []
