--- a/lập_trình_nâng_cao.ipynb
+++ b/lập_trình_nâng_cao.ipynb
@@ -3,8 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "lập trình nâng cao.ipynb",
+      "name": "lập trình nâng cao",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,17 +68,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2enxVh1SYqre"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
