Được tạo bằng Colaboratory

--- a/Numpy02.ipynb
+++ b/Numpy02.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPrqE6yTYqfuq7TbcVRAGCc",
+      "authorship_tag": "ABX9TyMlt3wzlGBbgfvbIiJCwbTl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -179,7 +179,10 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Ma trận đơn vị I9:\\n\",np.identity(9))\n"
+        "#cách 1\n",
+        "print(\"Ma trận đơn vị I9:\\n\",np.identity(9))\n",
+        "#cách 2\n",
+        "print(\"Ma trận đơn vị I9:\\n\",np.eye(9))"
       ],
       "metadata": {
         "id": "eiJYOUb6_k5E"
@@ -247,7 +250,8 @@
         "print(\"Ma trận A:\\n\", A)\n",
         "B = np.random.randint(1,5,[7,3])\n",
         "print(\"Ma trận B:\\n\", B)\n",
-        "print(\"Nhân hai ma trận A và B:\\n\",A.dot(B))"
+        "print(\"Nhân hai ma trận A và B:\\n\",A.dot(B))\n",
+        "#Ngoài ra: A @ B cũng là phép nhân hai ma trận A và B"
       ],
       "metadata": {
         "id": "CNmMqkLJ_rGJ"
