Được tạo bằng Colaboratory

--- a/Numpy02.ipynb
+++ b/Numpy02.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMlt3wzlGBbgfvbIiJCwbTl",
+      "authorship_tag": "ABX9TyNVe4ba4D8zqRfAek7arwjN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,7 +116,7 @@
       "cell_type": "code",
       "source": [
         "A = np.zeros([6,6])\n",
-        "np.fill_diagonal(a,val=15)\n",
+        "np.fill_diagonal(A,val=15)\n",
         "print(\"Ma trận chéo A:\\n\",A)\n"
       ],
       "metadata": {
