Được tạo bằng Colaboratory

--- a/Pandas01.ipynb
+++ b/Pandas01.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO/vA1g/djOutAMJEbce8js",
+      "authorship_tag": "ABX9TyNXhJx+pSZ46R3KHaiqnwUz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,12 +114,12 @@
     {
       "cell_type": "code",
       "source": [
-        "for i in 7:\n",
-        "  i+=1\n",
-        "  i=1\n",
-        "  a=numpy.array(input(\"Nhập phần tử\",i,\":\"))\n",
-        "  Series.append(a[i])\n",
-        "  pandas.Series([i])"
+        "a = numpy.random.randint(1,10,[7,1])\n",
+        "print(\"vector cot: \")\n",
+        "print(a)\n",
+        "b = a.reshape(7,)\n",
+        "print(\"series tuong ung\")\n",
+        "print(pandas.Series(b))"
       ],
       "metadata": {
         "id": "KZPTGMYFJwLC"
