Được tạo bằng Colaboratory

--- a/Pandas01.ipynb
+++ b/Pandas01.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "name": "Pandas01",
-      "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
       "authorship_tag": "ABX9TyNXhJx+pSZ46R3KHaiqnwUz",
@@ -40,11 +39,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "K_RklSuhHJl9"
+        "id": "K_RklSuhHJl9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "616477de-787d-4151-c4a6-79007276d416"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+            "  \n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Series([], dtype: float64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ],
       "source": [
         "import pandas\n",
         "pandas.Series()\n"
@@ -68,10 +90,26 @@
         "pandas.Series([a])"
       ],
       "metadata": {
-        "id": "YHY8aOLAH3Sv"
+        "id": "YHY8aOLAH3Sv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "02ce4587-1d53-4d4c-c995-15c796489702"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    [[38, 28, 10, 42, 20, 13, 36]]\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -96,10 +134,37 @@
         "print(s)"
       ],
       "metadata": {
-        "id": "xrer3MmiIOph"
+        "id": "xrer3MmiIOph",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9adc9c01-7ac8-4a44-84e9-c2a83322fd08"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nhập phần tử thứ 1 = 5\n",
+            "Nhập phần tử thứ 2 = 3\n",
+            "Nhập phần tử thứ 3 = 12\n",
+            "Nhập phần tử thứ 4 = 5\n",
+            "Nhập phần tử thứ 5 = 6\n",
+            "Nhập phần tử thứ 6 = 6\n",
+            "Nhập phần tử thứ 7 = 4\n",
+            "[1 2 3 4 5 6 7]\n",
+            "1     5\n",
+            "2     3\n",
+            "3    12\n",
+            "4     5\n",
+            "5     6\n",
+            "6     6\n",
+            "7     4\n",
+            "dtype: int64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -122,10 +187,38 @@
         "print(pandas.Series(b))"
       ],
       "metadata": {
-        "id": "KZPTGMYFJwLC"
+        "id": "KZPTGMYFJwLC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "50acbe12-fac6-4ac2-ffaa-0170057f1285"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vector cot: \n",
+            "[[3]\n",
+            " [8]\n",
+            " [6]\n",
+            " [8]\n",
+            " [6]\n",
+            " [4]\n",
+            " [5]]\n",
+            "series tuong ung\n",
+            "0    3\n",
+            "1    8\n",
+            "2    6\n",
+            "3    8\n",
+            "4    6\n",
+            "5    4\n",
+            "6    5\n",
+            "dtype: int64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -148,10 +241,25 @@
         "print(\"Chuyển list thành series: \",pandas.Series([list1]))\n"
       ],
       "metadata": {
-        "id": "DSQg62RyNx_n"
+        "id": "DSQg62RyNx_n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d458577a-e632-4c65-9015-bb66f79598d3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Số phần tử của list: 5\n",
+            "[0, 1, 2, 3, 4]\n",
+            "Chuyển list thành series:  0    [0, 1, 2, 3, 4]\n",
+            "dtype: object\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -162,10 +270,25 @@
         "print(\"Chuyển tuple thành series: \",pandas.Series([tuple1]))"
       ],
       "metadata": {
-        "id": "J3aaDyaYOtpn"
+        "id": "J3aaDyaYOtpn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ad7ccb60-68ad-474b-840c-2fcfb795c27c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Số phần tử của tuple: 5\n",
+            "<class 'tuple'>\n",
+            "Chuyển tuple thành series:  0    (0, 1, 2, 3, 4)\n",
+            "dtype: object\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -175,10 +298,26 @@
         "print(\"Chuyển dictionary thành series:\\n \", pandas.Series(dic1))"
       ],
       "metadata": {
-        "id": "QsksCDaVQQ9G"
+        "id": "QsksCDaVQQ9G",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3c043023-f894-4c9a-b657-97063be948d5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'phuong': 'Cute', 'birthday': 17}\n",
+            "Chuyển dictionary thành series:\n",
+            "  phuong      Cute\n",
+            "birthday      17\n",
+            "dtype: object\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -205,10 +344,23 @@
         "print(pandas.Series([x]))"
       ],
       "metadata": {
-        "id": "9RjCaRfUQ5EA"
+        "id": "9RjCaRfUQ5EA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4daceacb-e3d8-48c0-fcbe-35848f369c28"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0    [[9, 4, 2, 5, 18, 9, 16, 9, 10, 2, 17, 17, 9, ...\n",
+            "dtype: object\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -234,10 +386,25 @@
         "print(\"chi so e: \",a.loc['e'])"
       ],
       "metadata": {
-        "id": "asH6CZJQRgsP"
+        "id": "asH6CZJQRgsP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "717daf53-6d8d-4a6a-8b1c-80e7b98210be"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[3 8 6 8 6 4 5]\n",
+            "chi so a:  7\n",
+            "chi so c:  3\n",
+            "chi so e:  2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -247,10 +414,39 @@
         "print(\"Các phần tử của Series có chỉ số từ 3 đến 6:\\n\",b.iloc[2:7])"
       ],
       "metadata": {
-        "id": "k2WDnoWFVzWI"
+        "id": "k2WDnoWFVzWI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "abab24c6-8eec-4c0a-e58e-4646c31b8138"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0    1\n",
+            "1    7\n",
+            "2    3\n",
+            "3    1\n",
+            "4    8\n",
+            "5    4\n",
+            "6    4\n",
+            "7    9\n",
+            "8    5\n",
+            "9    9\n",
+            "dtype: int64\n",
+            "Các phần tử của Series có chỉ số từ 3 đến 6:\n",
+            " 2    3\n",
+            "3    1\n",
+            "4    8\n",
+            "5    4\n",
+            "6    4\n",
+            "dtype: int64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
