--- a/Numpy03.ipynb
+++ b/Numpy03.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Numpy03",
-      "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNf8CsQ2reH/caslOSnW838",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOwhgJMkKeC2jG2K1r6Om5t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,16 +72,43 @@
       "metadata": {
         "id": "Qd40CBU-R3D-"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "gwn8CLAvL0Ds"
+        "id": "gwn8CLAvL0Ds",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "16bb0c71-b96b-4b2f-8fa0-c76902eae563"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ma trận A:\n",
+            " [[ 4  1 18  2 12 12 18  7 13  6 12 19 19 13  8  8  2]\n",
+            " [18  1 12  1  7 10 13  9 16 16  5  8  4 14 19  7  8]\n",
+            " [ 4 14  8 17 16  6 12  5  4 16 12 15 17 16  7  1 11]\n",
+            " [12 10 10 15 18 17 17  5  5 17  3  8 12  2 10 17 10]\n",
+            " [ 9  3  7  5 15 19  3  9  1 15  7  9  9 18 12  7  2]\n",
+            " [ 9 11 19  4 15 15  1  6 17 17 13  8  8 14 11 15 11]\n",
+            " [14 18 13 15 19  8 12 17  9 18  8 11 11 16 19  1 19]\n",
+            " [13 18 17 14 15 15 11 11 16  8  1 12  3  2  6 17 16]\n",
+            " [ 6  8  5  1 11 17  2  1  6 15  5  1  8  8 16 18 19]\n",
+            " [ 9 18  3 11  4 15 15 11  8  4  3  8  5 19  9  7 10]\n",
+            " [19 18  7 15 17 15 16  4 17 18 13 10 18 16 13 11 18]\n",
+            " [ 1 16  4  6 15 19  1  7 18 14  5 14 10 14  6  6  1]\n",
+            " [17  6  1  5 15  5 11  6 14  7  9 13  3 12 12  8  6]\n",
+            " [11 17 10 19  1 13 12 19  5 11  1 11 12 13  5 10  2]\n",
+            " [ 3  7 10 10  1  3  5 12 17  6  4 13  8 11  1  6 12]]\n"
+          ]
+        }
+      ],
       "source": [
         "A = np.random.randint(1,20,[15,17])\n",
         "print(\"Ma trận A:\\n\",A)"
@@ -108,10 +135,25 @@
         "  "
       ],
       "metadata": {
-        "id": "fzZM7850R0j-"
+        "id": "fzZM7850R0j-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "58390992-d293-4ae7-c2ef-1c512faf6f6f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([19, 19, 17, 18, 19, 19, 19, 18, 19, 19, 19, 19, 17, 19, 17])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -132,25 +174,55 @@
         "np.apply_along_axis(tim_gia_tri_nho_nhat,1,vector_a)\n"
       ],
       "metadata": {
-        "id": "_6o0YjOuUMbV"
+        "id": "_6o0YjOuUMbV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2ec15827-a189-406a-838b-08afe2e786ac"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 1, 1, 3, 1, 1, 1, 4, 1, 1, 3, 2, 1, 1, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#Cách 2\n",
+        "#Cách 2|\n",
         "vector_a =np.array(A)\n",
         "def tim_gia_tri_nho_nhat(vector_a):\n",
         "  return np.min(vector_a)\n",
         "np.apply_along_axis(tim_gia_tri_nho_nhat,0,vector_a)"
       ],
       "metadata": {
-        "id": "cDTwy3WsVzPP"
+        "id": "cDTwy3WsVzPP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "250baa15-96a3-43cf-cfd6-bfd68ffc7d6c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 1, 1, 3, 1, 1, 1, 4, 1, 1, 3, 2, 1, 1, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -170,10 +242,26 @@
         "np.apply_along_axis(tinh_tong,1,vector_a)"
       ],
       "metadata": {
-        "id": "jgcJs9PqXBJu"
+        "id": "jgcJs9PqXBJu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "72a634a9-73d2-4a1b-f4ab-89100350a7dc"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([174, 168, 181, 188, 150, 194, 228, 195, 147, 159, 245, 157, 150,\n",
+              "       172, 129])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -187,33 +275,33 @@
     {
       "cell_type": "code",
       "source": [
-        "vector_a =np.array(A)\n",
-        "def tinh_tong(vector_a):\n",
-        "  return np.sum(vector_a)\n",
-        "np.apply_along_axis(tinh_tong,1,vector_a)\n"
+        "def tinh_tong_2(a):\n",
+        "  sum  = 0\n",
+        "  for i in range(len(a)):\n",
+        "    if (i % 2 != 0):\n",
+        "      sum  = sum +a[i]\n",
+        "  return sum\n",
+        "print(\"Tổng các phần tử có chỉ số lẻ\")\n",
+        "print (np.apply_along_axis(tinh_tong_2, 1, vector_a))\n"
       ],
       "metadata": {
-        "id": "ab3CTfBiXvDi"
+        "id": "ab3CTfBiXvDi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bc0862ba-45b1-4990-c45b-929f3c822a61"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import math\n",
-        "print(A)\n",
-        "i=0\n",
-        "for i in range(0,255):\n",
-        "  if A[i] % 2 == 0:\n",
-        "    A[i]=0\n",
-        "    i+=1\n"
-      ],
-      "metadata": {
-        "id": "GBNTwwtyYwCH"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tổng các phần tử có chỉ số lẻ\n",
+            "[ 68  66  90  91  85  90 104  97  69  93 107  96  62 113  68]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
