Được tạo bằng Colaboratory

--- a/TKMT1_Tìm_hiểu_hệ_số_tương_quan_correlation.ipynb
+++ b/TKMT1_Tìm_hiểu_hệ_số_tương_quan_correlation.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO/2vEJP69KPBOxtx1F4kEa",
+      "authorship_tag": "ABX9TyPuGeP8lrdvoXz+URLW+PHJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "eq3hMta4-Y4E"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "metadata": {
         "id": "Zpl5FTUx-wiP"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
         "id": "HeJqXVi_AASY",
         "outputId": "509391f9-5db3-44e3-9c2f-a1c33c2c313e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +266,7 @@
         "id": "mwmh3cCJ_9BR",
         "outputId": "2c50eedc-9215-49a5-eebd-f26bf18f902f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -307,7 +307,7 @@
         "id": "H68fYYnDAKPm",
         "outputId": "7b82a93b-e7bb-4de2-daa9-4c305ee18182"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -470,7 +470,7 @@
         "id": "p2FC11cMAMWA",
         "outputId": "ac6d53e7-b933-4fd5-b123-a3c089aa23f1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -505,7 +505,7 @@
         "id": "SNSCxx5MAQCh",
         "outputId": "5b750157-d6b4-4624-ffb6-69c438339e4c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,7 +528,7 @@
         "id": "bArK4TbDARiH",
         "outputId": "b4614799-7ce9-48bc-b072-e78660182aea"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,7 +551,7 @@
         "id": "UgFFAm8tATKm",
         "outputId": "2cdc92e4-b2d9-45f7-e1ca-aa02ea9ccfe8"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,7 +574,7 @@
         "id": "eluMoQ8sAUb3",
         "outputId": "8a930815-84c1-4b8a-e6dc-6191f6c24464"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -597,7 +597,7 @@
         "id": "dIGA2-AfAV77",
         "outputId": "23e1595c-f27b-4d41-de05-33f1b25016b3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -620,7 +620,7 @@
         "id": "dqwl91UkAZFD",
         "outputId": "8db8748c-64dc-4049-b3cc-7e8d74e8512b"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,7 +643,7 @@
         "id": "k_Sges4WAb6w",
         "outputId": "f01f10f5-5ab7-4a7f-fb1d-62ce5ee6e2f2"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -666,7 +666,7 @@
         "id": "c0hMZeyDAeMh",
         "outputId": "177f85b3-fd72-432e-b892-e3e0d6621b16"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -689,7 +689,7 @@
         "id": "OeuCviVdAf_H",
         "outputId": "07daa21c-299d-4c68-d1c5-6a49666ae55e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -722,7 +722,7 @@
         "id": "inlyVpJBAj59",
         "outputId": "1edf72e1-5665-4aa4-ee38-3fc6e8f3af9f"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -909,7 +909,7 @@
       "metadata": {
         "id": "jqfRBypxAnmG"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -925,7 +925,7 @@
         "id": "bJEgK1VWApMg",
         "outputId": "5584e30c-f049-48ec-959b-30ced9662c85"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -954,7 +954,7 @@
         "id": "Vy8k9tuAAqwt",
         "outputId": "b19122a1-dc16-45d4-b6ce-3b7909fc08bf"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1002,7 +1002,7 @@
         "id": "CJNwoow7AuCZ",
         "outputId": "fc30e270-0b47-412f-f1dd-a4e7093c6f3f"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1040,7 +1040,7 @@
         "id": "-sGZj6LZA1-X",
         "outputId": "78adbc00-5873-4326-8eee-1bc4a5e0b88e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1176,7 +1176,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Tương quan là một thước đo thống kê được tiêu chuẩn hóa thể hiện mức độ mà hai biến có liên quan tuyến tính với nhau (nghĩa là chúng thay đổi cùng nhau với tốc độ không đổi bao nhiêu). Độ mạnh và sự kết hợp định hướng của mối quan hệ giữa hai biến được xác định theo mối tương quan và nó nằm trong khoảng từ -1 đến +1. Tương tự như hiệp phương sai, giá trị dương biểu thị rằng cả hai biến chuyển động theo cùng một hướng trong khi giá trị âm cho chúng ta biết rằng chúng di chuyển theo các hướng ngược nhau."
+        "**Tương quan** là một thước đo thống kê được tiêu chuẩn hóa thể hiện mức độ mà hai biến có liên quan tuyến tính với nhau (nghĩa là chúng thay đổi cùng nhau với tốc độ không đổi bao nhiêu). Độ mạnh và sự kết hợp định hướng của mối quan hệ giữa hai biến được xác định theo mối tương quan và nó nằm trong khoảng từ -1 đến +1. Tương tự như hiệp phương sai, giá trị dương biểu thị rằng cả hai biến chuyển động theo cùng một hướng trong khi giá trị âm cho chúng ta biết rằng chúng di chuyển theo các hướng ngược nhau."
       ],
       "metadata": {
         "id": "GQ7tElbD-ITP"
@@ -1194,7 +1194,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Tính toán hệ số tương quan trong Python**"
+        "# **Tính toán hệ số tương quan**"
       ],
       "metadata": {
         "id": "mDQ87tXX6bMy"
