Được tạo bằng Colaboratory

--- a/Pandas01.ipynb
+++ b/Pandas01.ipynb
@@ -6,7 +6,7 @@
       "name": "Pandas01",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNXhJx+pSZ46R3KHaiqnwUz",
+      "authorship_tag": "ABX9TyMnG3+ZeG5qfURJvCTt6cWs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "id": "K_RklSuhHJl9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "616477de-787d-4151-c4a6-79007276d416"
+        "outputId": "25fcd42f-62c7-488f-f787-ed92eaf39253"
       },
       "outputs": [
         {
@@ -55,21 +55,12 @@
             "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
             "  \n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Series([], dtype: float64)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
         }
       ],
       "source": [
         "import pandas\n",
-        "pandas.Series()\n"
+        "pandas.Series()\n",
+        "import numpy\n"
       ]
     },
     {
@@ -85,7 +76,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy\n",
         "a = numpy.random.randint(0,50,[1,7])\n",
         "pandas.Series([a])"
       ],
@@ -94,20 +84,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "02ce4587-1d53-4d4c-c995-15c796489702"
+        "outputId": "2b98c598-a09e-4b48-930c-301fb76c8e0e"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0    [[38, 28, 10, 42, 20, 13, 36]]\n",
+              "0    [[49, 27, 6, 49, 8, 15, 42]]\n",
               "dtype: object"
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 5
         }
       ]
     },
@@ -138,29 +128,29 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9adc9c01-7ac8-4a44-84e9-c2a83322fd08"
+        "outputId": "70a58434-1811-4349-9d8a-2ef7a1de02b7"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Nhập phần tử thứ 1 = 5\n",
-            "Nhập phần tử thứ 2 = 3\n",
-            "Nhập phần tử thứ 3 = 12\n",
-            "Nhập phần tử thứ 4 = 5\n",
-            "Nhập phần tử thứ 5 = 6\n",
-            "Nhập phần tử thứ 6 = 6\n",
-            "Nhập phần tử thứ 7 = 4\n",
+            "Nhập phần tử thứ 1 = 2\n",
+            "Nhập phần tử thứ 2 = 4\n",
+            "Nhập phần tử thứ 3 = 5\n",
+            "Nhập phần tử thứ 4 = 6\n",
+            "Nhập phần tử thứ 5 = 2\n",
+            "Nhập phần tử thứ 6 = 1\n",
+            "Nhập phần tử thứ 7 = 1\n",
             "[1 2 3 4 5 6 7]\n",
-            "1     5\n",
-            "2     3\n",
-            "3    12\n",
-            "4     5\n",
-            "5     6\n",
-            "6     6\n",
-            "7     4\n",
+            "1    2\n",
+            "2    4\n",
+            "3    5\n",
+            "4    6\n",
+            "5    2\n",
+            "6    1\n",
+            "7    1\n",
             "dtype: int64\n"
           ]
         }
@@ -180,10 +170,10 @@
       "cell_type": "code",
       "source": [
         "a = numpy.random.randint(1,10,[7,1])\n",
-        "print(\"vector cot: \")\n",
+        "print(\"vector cột: \")\n",
         "print(a)\n",
         "b = a.reshape(7,)\n",
-        "print(\"series tuong ung\")\n",
+        "print(\"series tương ứng\")\n",
         "print(pandas.Series(b))"
       ],
       "metadata": {
@@ -191,30 +181,30 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "50acbe12-fac6-4ac2-ffaa-0170057f1285"
+        "outputId": "615b13ca-e506-43bc-8e43-e365f3d1d9bf"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "vector cot: \n",
-            "[[3]\n",
+            "vector cột: \n",
+            "[[6]\n",
+            " [7]\n",
+            " [3]\n",
+            " [1]\n",
             " [8]\n",
-            " [6]\n",
-            " [8]\n",
-            " [6]\n",
-            " [4]\n",
-            " [5]]\n",
-            "series tuong ung\n",
-            "0    3\n",
-            "1    8\n",
-            "2    6\n",
-            "3    8\n",
-            "4    6\n",
-            "5    4\n",
-            "6    5\n",
+            " [9]\n",
+            " [2]]\n",
+            "series tương ứng\n",
+            "0    6\n",
+            "1    7\n",
+            "2    3\n",
+            "3    1\n",
+            "4    8\n",
+            "5    9\n",
+            "6    2\n",
             "dtype: int64\n"
           ]
         }
@@ -245,17 +235,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d458577a-e632-4c65-9015-bb66f79598d3"
+        "outputId": "b15d7ddd-ed7a-4dfc-ad59-5429b2bc890f"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Số phần tử của list: 5\n",
-            "[0, 1, 2, 3, 4]\n",
-            "Chuyển list thành series:  0    [0, 1, 2, 3, 4]\n",
+            "Số phần tử của list: 4\n",
+            "[0, 1, 2, 3]\n",
+            "Chuyển list thành series:  0    [0, 1, 2, 3]\n",
             "dtype: object\n"
           ]
         }
@@ -276,7 +266,7 @@
         },
         "outputId": "ad7ccb60-68ad-474b-840c-2fcfb795c27c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +294,7 @@
         },
         "outputId": "3c043023-f894-4c9a-b657-97063be948d5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,7 +340,7 @@
         },
         "outputId": "4daceacb-e3d8-48c0-fcbe-35848f369c28"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,27 +371,27 @@
         "l2 = ['a','b','c','d','e','f','g','h','l','m']\n",
         "a.index = l2\n",
         "print(b)\n",
-        "print(\"chi so a: \",a.loc['a'])\n",
-        "print(\"chi so c: \",a.loc['c'])\n",
-        "print(\"chi so e: \",a.loc['e'])"
+        "print(\"chỉ số a: \",a.loc['a'])\n",
+        "print(\"chỉ số c: \",a.loc['c'])\n",
+        "print(\"chỉ số e: \",a.loc['e'])"
       ],
       "metadata": {
         "id": "asH6CZJQRgsP",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "717daf53-6d8d-4a6a-8b1c-80e7b98210be"
+        "outputId": "85ee1da3-b0ce-4963-fafe-8f6e7fe20469"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[3 8 6 8 6 4 5]\n",
-            "chi so a:  7\n",
-            "chi so c:  3\n",
-            "chi so e:  2\n"
+            "[6 7 3 1 8 9 2]\n",
+            "chỉ số a:  3\n",
+            "chỉ số c:  3\n",
+            "chỉ số e:  3\n"
           ]
         }
       ]
@@ -420,7 +410,7 @@
         },
         "outputId": "abab24c6-8eec-4c0a-e58e-4646c31b8138"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
